--- a/src/components/ui/layout.css
+++ b/src/components/ui/layout.css
@@ -6,9 +6,7 @@
     margin: 0 auto;
     margin-top: 150px;
   }
-  .heading{
-    color: white;
-  }
+
   .displayScreen {
     height: 100px;
     width: 100%;
@@ -28,7 +26,6 @@
   .button-box{
     padding: 15px;
     width: 100%;
-    height: calc(100% - 110px);
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(5, 1fr);
@@ -46,7 +43,7 @@
     font-family: nunito,roboto,proxima-nova,"proxima nova",sans-serif;;
     font-size: 25px;
     font-weight: 700;
-    line-height: 10px;
+    line-height: 8px;
     margin: 0;
     outline: none;
     width: 100%;
@@ -57,10 +54,14 @@
   button:hover {
     background-color: white;
   }
+  .last-btn:hover{
+    color: black;
+  }
   .last-btn{
     display: flex;
     grid-template: 50%, 50%;
     grid-gap: 10px;
+    color: black;
     
     padding: 20px;
     margin: 0;
